# encapfn-mpk

./: Cargo.toml  generate-libpng-sandcrust-omniglot-comparison-plot.py  osdi25-eval-reproduce.sh  rust-toolchain.toml  shell.nix
encapfn-mpk/: Cargo.toml
encapfn-mpk/src/: encapfn_mpk_loader.c  encapfn_mpk_loader_stub.c  encapfn_mpk_rt.c  encapfn_mpk_rt.h  lib.rs
examples/brotli/: Cargo.toml  build.rs
examples/brotli/benches/: brotli_compression_comparison.rs
examples/brotli/src/: lib.rs  main.rs
examples/libpng/: Cargo.toml  build.rs  libpng.encapfn.toml
examples/libpng/benches/: libpng_decode_comparison.rs
examples/libpng/src/: ef_mpk.rs  lib.rs  main.rs  unsafe_ffi.rs
examples/libsodium/: Cargo.toml  build.rs  default.nix
examples/libsodium/benches/: criterion.rs  sodium_hash_comparison.rs
examples/libsodium/src/: lib.rs  main.rs
examples/llhttp/: Cargo.toml  build.rs  default.nix  llhttp.encapfn.toml  strace.txt  wrapper.h
examples/llhttp/src/: lib.rs  main.rs
examples/ubench/: Cargo.toml  build.rs  efdemo.encapfn.toml
examples/ubench/benches/: callback_ubench.rs  invoke_ubench.rs  process_startup_demo_nop_ef_mpk.rs  process_startup_demo_nop_sandcrust.rs  process_startup_demo_nop_unsafe.rs  upgrade_ubench.rs  validation_ubench.rs
examples/ubench/c_src/: efdemo.c  efdemo.h
examples/ubench/src/: lib.rs  main.rs
src/: encapfn_mpk_loader.c  encapfn_mpk_loader.h  encapfn_mpk_rt.c
util/: fsgsbase_enabled.c
