[workspace]
resolver = "2"
members = [
    "encapfn-mpk",
    "examples/libsodium",
    "examples/llhttp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.encapfn]
git = "https://github.com/encapfn/encapfn"
rev = "a4d89b63c55256485ce459d92015fa218476ade0"
# path = "../encapfn"
features = [ "std" ]

[workspace.dependencies.bindgen]
git = "https://github.com/encapfn/rust-bindgen"
rev = "303b1f41e7ea715df515cd43ba7909bf61cf97cf"
# path = "../rust-bindgen/bindgen"
