[workspace]
resolver = "2"
members = [
    "encapfn-mpk",
    "examples/brotli",
    "examples/libpng",
    "examples/libsodium",
    "examples/ubench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.encapfn]
git = "https://github.com/encapfn/encapfn"
rev = "a7a8867395577f01bd335c5adf8ce7742fc8eaa9"
# path = "../encapfn"
features = [ "std" ]

[workspace.dependencies.bindgen]
git = "https://github.com/encapfn/rust-bindgen"
rev = "3b0958d2dda39f9a899f011fb468772cfef1eaac"
# path = "../rust-bindgen/bindgen"
