[workspace]
resolver = "2"
members = [
    "encapfn-mpk",
    "examples/libsodium",
    "examples/ubench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies.encapfn]
git = "https://github.com/encapfn/encapfn"
rev = "7ec1e19bfa22cb98e45a1d132934d3630e48856a"
# path = "../encapfn"
features = [ "std" ]

[workspace.dependencies.bindgen]
git = "https://github.com/encapfn/rust-bindgen"
rev = "3b0958d2dda39f9a899f011fb468772cfef1eaac"
# path = "../rust-bindgen/bindgen"
