[package]
name = "ef_brotli"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_brotli_lib"

[[bin]]
name = "ef_brotli"

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }
env_logger = "0.11.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

# [[bench]]
# name = "brotli_compress_comparison"
# harness = false