[package]
name = "ef_libpng"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_libpng_lib"

[[bin]]
name = "ef_libpng"

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = "0.5.1"
sandcrust = { git = "https://github.com/atopia/sandcrust", rev = "0de40c50ebf8b6253dbf953c6e9e4498b1670c90" }

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[[bench]]
name = "libpng_decode_comparison"
harness = false
