[package]
name = "ef_libsodium"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_libsodium_lib"

[[bin]]
name = "ef_libsodium"

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"

[[bench]]
name = "criterion"
harness = false

