[package]
name = "ef_libsodium"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_libsodium_lib"

[[bin]]
name = "ef_libsodium"

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
sandcrust = { git = "https://github.com/atopia/sandcrust", rev = "0de40c50ebf8b6253dbf953c6e9e4498b1670c90" }

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "sodium_hash_comparison"
harness = false
