[package]
name = "ef_llhttp"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_llhttp_lib"

[[bin]]
name = "ef_llhttp"

[build-dependencies]
bindgen.workspace = true

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }

clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
