[package]
name = "ef_ubench"
version = "0.1.0"
edition = "2021"

[lib]
name = "ef_ubench_lib"

[[bin]]
name = "ef_ubench_bin"
path = "src/main.rs"

[build-dependencies]
bindgen.workspace = true

[dev-dependencies]
criterion = "0.5.1"
sandcrust = { git = "https://github.com/atopia/sandcrust", rev = "0de40c50ebf8b6253dbf953c6e9e4498b1670c90" }
serde_json = "1.0.133"

[dependencies]
encapfn.workspace = true
encapfn-mpk = { path = "../../encapfn-mpk" }
env_logger = "0.11.3"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[[bench]]
name = "invoke_ubench"
harness = false

[[bench]]
name = "validation_ubench"
harness = false

[[bench]]
name = "process_startup_demo_nop_unsafe"
harness = false

[[bench]]
name = "process_startup_demo_nop_ef_mpk"
harness = false

[[bench]]
name = "process_startup_demo_nop_sandcrust"
harness = false

[[bench]]
name = "process_startup_demo_nop"
harness = false
